RESOLVED FIXED132642
AX: aria-expanded changes are not communicated to clients
https://bugs.webkit.org/show_bug.cgi?id=132642
Summary AX: aria-expanded changes are not communicated to clients
chris fleizach
Reported 2014-05-06 22:51:14 PDT
If aria-expanded changes, there's no notification for clients to observe <rdar://problem/16834265>
Attachments
patch (6.05 KB, patch)
2014-05-06 23:14 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2014-05-06 23:14:23 PDT
Mario Sanchez Prada
Comment 2 2014-05-07 10:25:02 PDT
Comment on attachment 230972 [details] patch The EFL failure seems unrelated to this patch. LGTM
WebKit Commit Bot
Comment 3 2014-05-07 11:32:36 PDT
Comment on attachment 230972 [details] patch Clearing flags on attachment: 230972 Committed r168432: <http://trac.webkit.org/changeset/168432>
WebKit Commit Bot
Comment 4 2014-05-07 11:32:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.