AX: aria-expanded changes are not communicated to clients https://bugs.webkit.org/show_bug.cgi?id=132642

Reviewed by Mario Sanchez Prada.

Source/WebCore:
When aria-expanded changes on non list/tree items, send out a generic
AXExpandedChange notification.

Test: platform/mac/accessibility/expanded-notification.html

* accessibility/AXObjectCache.h:
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::handleAriaExpandedChanged):
* accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::postPlatformNotification):

LayoutTests:
* platform/mac/accessibility/expanded-notification-expected.txt: Added.
* platform/mac/accessibility/expanded-notification.html: Added.


Canonical link: https://commits.webkit.org/150699@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168432 268f45cc-cd09-0410-ab3c-d52691b4dbfc